<resources>
    <string name="app_name">Anki Helper Plus</string>
    <string name="popup_name">Popup for Anki Helper Plus</string>
    <string name="screenshot_name">Screenshot for Anki Helper Plus</string>
    <string name="floating_name">FloatBall for Anki Helper Plus</string>
    <string name="tv_plan_name">Plan Name:</string>
    <string name="title_plan_editor">📝Plan Editor</string>
    <string name="title_script_content_editor">Script Reference</string>
    <string name="tv_select_plan">Plan:</string>
    <string name="tv_select_deck">Deck:</string>
    <string name="tv_select_model">Model:</string>
    <string name="tv_choose_dictionary">Dictionary:</string>
    <string name="api_not_available_message">Api not available!</string>
    <string name="permission_denied">Permission Denied！</string>
    <string name="dialog_ask_permission_overlays">The lack of suspended window permission, or can not use the floating ball function!</string>
    <string name="dialog_btn_go_to_permission_window">GO TO SET PERMISSION</string>
    <string name="cancel_after_add">Close Popup after adding</string>
    <string name="monite_clipboard">Monitor Clipboard</string>
    <string name="title_plans_manager_str">Plans Manager</string>
    <string name="str_share">Share</string>
    <string name="str_added">Added</string>
    <string name="str_add_rich_text">Add rich</string>
    <string name="str_rich_text_to_plain">Rich text to plain</string>
    <string name="str_failed_add">Failed! Please check plan settings.</string>
    <string name="str_no_dictionary_in_solution" formatted="true">The dictionary \"%s\" selected in the \"%s\" solution does not exist. Please check if it needs to be re-imported.</string>
    <string name="str_no_dictionary" formatted="true">The dictionary \"%s\" does not exist, please check if you need to re-import the dictionary.</string>
    <string name="str_plan_name_should_not_be_blank">Plan name can\'t be blank!</string>
    <string name="plan_already_exists">Plan name already exists!</string>
    <string name="cleared">Cleared</string>
    <string name="dialog_note">Note</string>
    <string name="dialog_ok">Ok</string>
    <string name="username">Username</string>
    <string name="activationcode">Activation Code</string>
    <string name="btn_activate">Activate</string>
    <string name="btn_activated">Be Activated</string>
    <string name="machinecode">Registration Code</string>
    <string name="dialog_tag">Tag(seperated by\',\')</string>
    <string name="tag_cant_be_blank">Tag can\'t be blank!</string>
    <string name="definition_not_found">Definition not found</string>
    <string name="str_about">About</string>
    <string name="about_message">I\'m Zha Maomiao(aka mmjang), this project is open-sourced. <a href="https://github.com/mmjang/ankihelper">Check it out on github.</a></string>
    <string name="confirm_deletion">Delete?</string>
    <string name="save_plan_error_all_blank">Failed to save. All fields are empty!</string>
    <string name="plan_anki_not_started">please start ankidroid first!</string>
    <string name="str_ankidroid_directory_setting">1. Open AnkiDroid: Settings > Advanced > AnkiDroid Directory\n2. Click OK and select the AnkiDroid directory.</string>
    <string name="open_ankidroid">Open AnkiDroid</string>
    <string name="title_custom_dicitonary_str">Custom Dictionaries</string>
    <string name="title_mdict_str">📗Mdx Dict</string>
    <string name="title_activity_mdict_editor">Mdict editor</string>
    <string name="title_tango_str">📘Tango Dict</string>
    <string name="title_popupwindow_settings_str">📰Popup Window Settings</string>
    <string name="title_floating_settings_str">🛸Floating Button</string>
    <string name="title_intelligencewindow_settings_str">🧠Intelligence</string>
    <string name="title_matheditor_window_str">📝Latex Editor</string>
    <string name="title_custom_fanyi_engine_api">🐻Translation Engine</string>
    <string name="tv_ocr_helper">OCR</string>
    <string name="btn_tess_str">Tesseract OCR</string>
    <string name="btn_tess_data_str">tessdata</string>
    <string name="info_downloaded"> downloaded</string>
    <string name="name_mathpix_ocr">Mathpix</string>
    <string name="btn_open_mlkit_ocrwindow_settings_str">ML-kit</string>
    <string name="til_ocr_hint_processing">...</string>
    <string name="til_ocr_hint_result">Content:</string>
    <string name="tv_popup_font_size">BigBang font size: %d</string>
    <string name="switch_floating">Open the floating Ball</string>
    <string name="switch_pin_floating">Pin-up📌</string>
    <string name="switch_floating_auto_side">Auto side</string>
    <string name="tv_open_accessibility">Accessibility service</string>
    <string name="tv_accessibility_package_name">Package name</string>
    <string name="tv_kill_battery">Kill Battery</string>
    <string name="tv_open_overlays">Overlays Permission</string>
    <string name="switch_clear_searched">Clear copied text after Search</string>
    <string name="switch_floating_snip_search">Snip/Search switch</string>
    <string name="switch_copy_marked">Copy marked text</string>
    <string name="tv_popup_toolbar_buttons">Toolbar buttons</string>
    <string name="tv_webview_context_menu">Context Menu</string>
    <string name="tv_popup_floating">Floating</string>
    <string name="tv_popup_sideline">Side Line</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="tv_popup_plan_and_deck">Plan &#38; Deck</string>
    <string name="tv_popup_text">Text</string>
    <string name="tv_other">Other</string>
    <string name="switch_popup_symbol">Allow selecting symbol</string>
    <string name="switch_merge_bold_tags">Merge bold tags(Selections)</string>
    <string name="switch_popup_auto_search">Automatic search</string>
    <string name="switch_automatic_translation">Automatic translation</string>
    <string name="switch_automatic_recognition">Automatic recognition</string>
    <string name="switch_popup_add_scroll_bottom">Bottom</string>
    <string name="switch_popup_add_search">Search</string>
    <string name="switch_popup_add_note">Note</string>
    <string name="tv_preview">Preview</string>
    <string name="switch_popup_add_tag">Tag</string>
    <string name="switch_popup_add_copy">Copy</string>
    <string name="tv_floating_alpha">Alpha</string>
    <string name="tv_floating_hovering">Hovering<i>(ms)</i></string>
    <string name="tv_floating_size">Floating Size</string>
    <string name="str_clear_cache">Clear cache🚽</string>
    <string name="tv_customize_your_plan_list">Customize your plan list</string>
    <string name="tv_customize_your_deck_list">Customize your deck list</string>
    <string name="toast_keep_at_least_one_plan">Keep at least one plan</string>
    <string name="toast_keep_at_least_one_deck">Keep at least one deck</string>
    <string name="toast_failed_to_get_plan_list">Failed to get plan list</string>
    <string name="toast_failed_to_get_deck_list">Failed to get deck list</string>
    <string name="tv_choose_translation_engine">Choose translation engine</string>
    <string name="tv_select_mathpix_request_parameters">Select the request parameters</string>
    <string name="tv_cache_has_been_clear">Cache has been clear</string>
    <string name="switch_popup_deck">Allow selecting deck</string>
    <string name="switch_popup_ignoree_deck_plan">Ignore the deck of plan</string>
    <string name="title_activity_tango_location_editor">Tango location editor</string>
    <string name="add_custom_dictionary_str">Import custom dictionary</string>
    <string name="delete_all_custom_dictionary">Clear imported dictionaries</string>
    <string name="delete_all_mdict">Clear imported dictionaries</string>
    <string name="confirm_add_default_plan">No plans found, add default?</string>
    <string name="confirm_use_mathpix">Use Mathpix？</string>
    <string name="default_plan_added">Default plan added, check out at plans manager</string>
    <string name="str_ankidroid_path">AnkiDroid Directory</string>
    <string name="btn_activation_str">Activation</string>
    <string name="btn_help_str">Help</string>
    <string name="btn_about_and_support_str"></string>
    <string name="confirm_add_default_plan_when_exists_already">Add default plan?</string>
    <string name="adding_default_plan_str">Add default</string>
    <string name="duplicate_plan_name_complain">Default plan already exists, delete it in plans manager first.</string>
    <string name="toast_no_available_plan">No usable plan, add one in the main window of ankihelper.</string>
    <string name="left_hand_mode">Left Hand Mode</string>
    <string name="str_add_qq_group">Join QQ Group</string>
    <string name="str_clipboard_service_running">Clipboard Monitor is Running</string>
    <string name="str_field_map">Fields Mapping\\Mode:</string>
    <string name="str_field_map_normal">Normal</string>
    <string name="str_field_map_append">Append</string>
    <string name="note_mode_create">Create</string>
    <string name="note_mode_append">Append</string>
    <string name="note_mode_replace">Replace</string>
    <string name="dark_mode_system">System</string>
    <string name="dark_mode_light">Light</string>
    <string name="dark_mode_dark">Dark</string>
    <string name="color_theme_green">Sea green</string>
    <string name="color_theme_blue">Dodger blue</string>
    <string name="color_theme_pink">Rosy brown</string>
    <string name="str_only_one_plan_cant_switch">There is only one plan, not switchable.</string>
    <string name="str_btn_open_random_quote">Random Content</string>
    <string name="str_dark_mode_q">Dark Mode</string>
    <string name="str_color_theme_q">Color Theme</string>
    <string name="str_error_noteid">Failed to add note id</string>
    <string name="str_error_notetype_noncompatible">Note failed to update. Note type not compatible</string>
    <string name="str_note_updated">Note updated!</string>
    <string name="str_error_note_update">Note failed to update!</string>
    <string name="str_cancel_note_add">Canceled</string>
    <string name="error_note_cancel">Failed to cancel</string>
    <string name="str_not_cancelable_append_mode">No cancellable in append mode</string>
    <string name="str_switch_plans">Switch Model Id</string>
    <string name="str_export_plans">Export plans to clipboard</string>
    <string name="str_import_plans">Import plans from clipbaord</string>
    <string name="str_delete_all_plans">Clear imported plans</string>
    <string name="toast_import_multi">Importing takes more time, waiting please.</string>
    <string name="title_activity_stat">📈Statistics</string>
</resources>