<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/tv_ocr_helper"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/btn_set_ocrsetting_mlkit"
                        android:text="@string/btn_open_mlkit_ocrwindow_settings_str"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <View style="@style/Divider" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/btn_set_ocrsetting"
                        android:text="@string/btn_tess_str"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                </com.balysv.materialripple.MaterialRippleLayout>

                <View style="@style/Divider" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/btn_set_mathpix_ocr"
                        android:text="@string/name_mathpix_ocr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="16dp"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                </com.balysv.materialripple.MaterialRippleLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="12dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    android:text="@string/tv_other"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_automatic_recognition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:paddingLeft="16dp"
                        android:text="@string/switch_automatic_recognition"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>